AMP-26400 Fix style issues, align title, increase margin at the bottom
AMP-26400 Fix style issues, align title, increase margin at the bottom

--- a/amp/TEMPLATE/reamp/modules/admin/data-freeze-manager/styles/less/main.less
+++ b/amp/TEMPLATE/reamp/modules/admin/data-freeze-manager/styles/less/main.less
@@ -777,3 +777,8 @@ a:hover {
 .grace-period-input, .notification-days-input {
   min-width:50px;
 }
+
+.title-container{
+    padding-right: 3px !important;
+    padding-left: 3px !important; 
+}
